crates/swc_css_parser/tests/errors/custom-properties/semicolon/output.stderr
error: Expected "}"
 --> $DIR/tests/errors/custom-properties/semicolon/input.css:2:34
  |
2 |     --semicolon-not-top-level: (;);
  |                                  ^

